# LexiClass-Worker

./: .gitignore  Dockerfile  README.md  REFACTORING_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATABASE_SESSION_MANAGEMENT.md  DEVELOPMENT.md  PLUGIN_USAGE_GUIDE.md  TASKS_REFERENCE.md  TROUBLESHOOTING.md
src/lexiclass_worker/: __init__.py  celery.py  models.py
src/lexiclass_worker/core/: __init__.py  base.py  config.py  database.py  exceptions.py  logging.py  queue_config.py  storage.py
src/lexiclass_worker/tasks/: __init__.py  field_evaluate.py  field_predict.py  field_train.py  index.py  predict.py  train.py
tests/: README.md  __init__.py  conftest.py  test_index_task_integration.py  test_indexing_status.py
