[project]
name = "lexiclass-worker"
version = "0.1.0"
description = "Celery worker service for LexiClass ML tasks"
authors = [
    {name = "Arafat Hasan", email = "opendoor.arafat@gmail.com"},
]
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "lexiclass @ git+https://github.com/arafat-hasan/LexiClass.git",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lexiclass_worker*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]
