[project]
name = "lexiclass-worker"
version = "0.1.0"
description = "Celery worker service for LexiClass ML tasks"
authors = [
    {name = "Arafat Hasan", email = "opendoor.arafat@gmail.com"},
]
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "lexiclass @ git+https://github.com/arafat-hasan/LexiClass.git",
    # Use a relative file reference for the local sibling package. The previous
    # `file:///../LexiClass-Core` resolved to `/LexiClass-Core` (absolute)
    # which caused the OSError when that path didn't exist. A relative file
    # reference keeps this portable for local development.
    "lexiclass-core @ file:../LexiClass-Core",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lexiclass_worker*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]
